# aiocircuitbreaker

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  codecov.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  run-test.yml
aiocircuitbreaker/: __init__.py  aiocircuitbreaker.py
tests/: test_functional.py  test_unit.py
